# lightda-lenkf-rsm

./: CMakeLists.txt  Config.cmake.in  README.md  lenkf_rsm.f90  lightda-lenkf-rsm.md.in
src/: CMakeLists.txt  lenkf_rsm.f90  lenkf_rsm_c.f90  lenkf_rsm_filter.F90
superbuild/: CMakeLists.txt
tests/: CMakeLists.txt  dummy_model_forward_operator.F90  single_obs_test.F90
